--- a/views/questionario/listar.ejs
+++ b/views/questionario/listar.ejs
@@ -9,7 +9,7 @@
 		order: [[1, "asc"]],
 		deferRender: true,
 		columns: [
-			{ title: "", "class": "col-min", searchable: false, orderable: false, data: "id", render: function (v, type, row) { return '<a target="_blank" title="Editar" href="<%- root %>/questionario/editar?id=' + row.id + '" class="btn btn-sm btn-outline-primary"><i class="fa fa-fw fa-edit"></i></a> <a target="_blank" title="Visualizar" href="<%- root %>/teste/' + row.url + '" class="btn btn-sm btn-outline-success"><i class="fa fa-fw fa-link"></i></a> <a target="_blank" title="Visualizar" href="<%- root %>/questionario/relatorio?id=' + row.id + '" class="btn btn-sm btn-outline-success"><i class="fa fa-fw fa-table"></i></a> <button title="Excluir" type="button" data-excluir="1" class="btn btn-sm btn-outline-danger"><i class="fa fa-fw fa-times "></i></button>'; } },
+			{ title: "", "class": "col-min", searchable: false, orderable: false, data: "id", render: function (v, type, row) { return '<a target="_blank" title="Editar" href="<%- root %>/questionario/editar?id=' + row.id + '" class="btn btn-sm btn-outline-primary"><i class="fa fa-fw fa-edit"></i></a> <a target="_blank" title="Visualizar" href="<%- root %>/teste/' + row.url + '" class="btn btn-sm btn-outline-success"><i class="fa fa-fw fa-link"></i></a> <a target="_blank" title="Relatório de Submissões" href="<%- root %>/questionario/relatorio?id=' + row.id + '" class="btn btn-sm btn-outline-success"><i class="fa fa-fw fa-table"></i></a> <button title="Excluir" type="button" data-excluir="1" class="btn btn-sm btn-outline-danger"><i class="fa fa-fw fa-times "></i></button>'; } },
 			{ title: "Nome", render: encode, data: "nome" },
 			{ title: "Departamento", "class": "obs-col quebra-linha", render: encode, data: "departamentos" },
 		],
