--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -70,6 +70,13 @@
 		</div>
 	</li>
 
+	<li class="nav-item">
+		<a class="nav-link" href="<%- root %>/questionario/relatorio">
+			<i class="fas fa-fw fa-chart-bar"></i>
+			<span>Relatório de Submissões</span>
+		</a>
+	</li>
+
 	<!--
 	<hr class="sidebar-divider">
 
